Fix JRE8 build